# Limes

./: .gitignore  README.md  Untitled.ipynb  build.sh  common.py  conda-install.sh  config.py  dev-loop.sh  install-requirements.sh  install.sh  limes.py  limes_core.py  limes_provider.py  network.py  notes.txt  out  package-lock.json  provider_fosDB.py  run.sh  scratch.ipynb  scratch.py  server-requirements.txt  setup.sh  test.ipynb  test.py  test.sh  version
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
common/: config.py  data.py  endpoints.py  network.py  promises.py  serializable.py  server.py  utils.py
common/certificate/: gencert.sh
coms/: requester.py  server.py
coms/certificate/: gencert.sh  gencert.win.sh
config.inventory/: LICENSE  setup.cfg
config.server/: LICENSE  README.md  setup.cfg
core/: _server.py  limes-core.py  server.py
db/: wrapper.py
inbound/: server.py
inbound/certificate/: gencert.sh
inbound/certificate/private/: cert.pem  key.pem
limes_client/: README.md  setup.cfg
limes_client/tests/: serializeTests.py
limes_common/: LICENSE  README.md  setup.cfg
limes_common/src/limes_common/: __init__.py  config.py
limes_common/src/limes_common/coms/: requester.py
limes_common/src/limes_common/models/: basic.py  inventory.py  network.py  provider.py
limes_core/: README.md  setup.cfg
limes_inventory/: setup.cfg
limes_inventory/src/limes/: .env  __init__.py  limes.py
limes_server/: setup.cfg
models/: basic.py  inventory.py  network.py  provider.py
network/: _endpoints.py  promises.py  server.py
outbound/: requester.py
package/: scratch.py  setup.cfg  setup.py
package/limes/: __main__.py  limes.py
package/limes/connections/: http.py  ssh.py
package/limes/models/: __init__.py  elab.py  provider.py  server.py
package/limes/tests/: elab.py  limes.py  models.py  sshConnection.py  testTools.py
package/src/: __init__.py  config.py  limes.py  log.txt  manage.py  static_providers.json
peripheral/: limes.py
release/conda/: meta.yaml
testSpace/: run.sh
tests/: elab.py  limes.py  serializeTests.py  sshConnection.py  test.ipynb  test.py
website/: handler.py
website/lib/: bar.min.js  bs4.min.css
website/public/: Root_Redirect.html
(+210 files in other folders)
