[metadata]
name = limes-inventory
version = 0.1.dev5
author = Tony Liu
author_email = contactTonyLiu@gmail.com
description = limes client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tony-xy-Liu/Limes
project_urls =
    Bug Tracker = https://github.com/Tony-xy-Liu/Limes/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    requests

[options.packages.find]
where = src
exclude =
    src.limes-server

[options.entry_points]
console_scripts =
    limes = limes.__main__:main