[metadata]
name = limes-server
version = 0.4.dev1
author = Tony Liu
author_email = contactTonyLiu@gmail.com
description = limes core test package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tony-xy-Liu/Limes
project_urls =
    Bug Tracker = https://github.com/Tony-xy-Liu/Limes/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    requests
    flask
    flask-cors

[options.packages.find]
where = src
exclude =
    src.limes