[metadata]
name = limes-common
version = 0.1.dev1
author = Tony Liu
author_email = contactTonyLiu@gmail.com
description = limes common test package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tony-xy-Liu/Limes
project_urls =
    Bug Tracker = https://github.com/Tony-xy-Liu/Limes/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3

[options.packages.find]
where = src